prevent quantity on location card being broken onto 2 lines

--- a/src/component-library/components/CardLocation/CardLocation.module.scss
+++ b/src/component-library/components/CardLocation/CardLocation.module.scss
@@ -45,3 +45,7 @@
   width: auto;
   height: px-to-rem(24);
 }
+
+.quantity {
+  word-break: normal;
+}
